--- a/notebooks/analyzing_optimization.ipynb
+++ b/notebooks/analyzing_optimization.ipynb
@@ -931,6 +931,47 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'hyperparameters': {'r': 22,\n",
+       "  'lora_alpha': 29,\n",
+       "  'lora_dropout': 0.3349449195238189,\n",
+       "  'bias': 'all',\n",
+       "  'learning_rate': 0.0009978611060488306,\n",
+       "  'batch_size': 8,\n",
+       "  'weight_decay': 0.06270649322978346,\n",
+       "  'epochs': 13},\n",
+       " 'info': {'trainable_params': 889350,\n",
+       "  'all_params': 109221894,\n",
+       "  'trainable%': 0.8142598223026603},\n",
+       " 'metrics': {'precision': 0.8464912280701754,\n",
+       "  'recall': 0.8427947598253275,\n",
+       "  'f1': 0.8446389496717724,\n",
+       "  'accuracy': 0.9734369938451571}}"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# procurando qual tentativa apresentou o melhor desempenho\n",
+    "tv_results5 = read_json(f'{path}/fine_tuning/tv/lora_baseline.json')\n",
+    "best_trial = (None, 0.0)\n",
+    "for trial, infos in tv_results5.items():\n",
+    "    if 'metrics' in infos.keys():\n",
+    "        if infos['metrics']['f1'] > best_trial[1]:\n",
+    "            best_trial = (trial, infos['metrics']['f1'])\n",
+    "tv_results5[best_trial[0]]"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -940,7 +981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -969,7 +1010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1000,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1031,7 +1072,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1061,6 +1102,47 @@
     "# procurando qual tentativa apresentou o melhor desempenho\n",
     "reli_results4 = read_json(f'{path}/fine_tuning/reli/d_litera_bert_ffn.json')\n",
     "best_hyperparams(reli_results4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'hyperparameters': {'r': 12,\n",
+       "  'lora_alpha': 27,\n",
+       "  'lora_dropout': 0.4564039673376695,\n",
+       "  'bias': 'none',\n",
+       "  'learning_rate': 0.0003086875775669831,\n",
+       "  'batch_size': 32,\n",
+       "  'weight_decay': 0.0855465837461197,\n",
+       "  'epochs': 7},\n",
+       " 'info': {'trainable_params': 446982,\n",
+       "  'all_params': 108779526,\n",
+       "  'trainable%': 0.41090636853850604},\n",
+       " 'metrics': {'precision': 0.678714859437751,\n",
+       "  'recall': 0.6035714285714285,\n",
+       "  'f1': 0.6389413988657844,\n",
+       "  'accuracy': 0.9875864514984927}}"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# procurando qual tentativa apresentou o melhor desempenho\n",
+    "reli_results5 = read_json(f'{path}/fine_tuning/reli/lora_baselie.json')\n",
+    "best_trial = (None, 0.0)\n",
+    "for trial, infos in reli_results5.items():\n",
+    "    if 'metrics' in infos.keys():\n",
+    "        if infos['metrics']['f1'] > best_trial[1]:\n",
+    "            best_trial = (trial, infos['metrics']['f1'])\n",
+    "reli_results5[best_trial[0]]"
    ]
   }
  ],
