--- a/notebooks/gpt_completion.ipynb
+++ b/notebooks/gpt_completion.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +10,7 @@
     "import pandas as pd\n",
     "import polars as pl\n",
     "\n",
-    "openai.api_key = ''"
+    "openai.api_key = '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'"
    ]
   },
   {
