--- a/notebooks/lora.ipynb
+++ b/notebooks/lora.ipynb
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,7 +318,7 @@
     "learning_rate = 0.0009978611060488306\n",
     "batch_size = 8\n",
     "weight_decay = 0.06270649322978346\n",
-    "epochs = 13"
+    "epochs = 20"
    ]
   },
   {
@@ -375,7 +375,7 @@
     "    model=model,\n",
     "    args=training_args,\n",
     "    train_dataset=tokenized_data[\"train\"],\n",
-    "    eval_dataset=tokenized_data[\"validation\"],\n",
+    "    eval_dataset=tokenized_data[\"test\"],\n",
     "    tokenizer=tokenizer,\n",
     "    data_collator=data_collator,\n",
     "    compute_metrics=compute_metrics,\n",
