--- a/notebooks/gpt_completion.ipynb
+++ b/notebooks/gpt_completion.ipynb
@@ -10,7 +10,7 @@
     "import pandas as pd\n",
     "import polars as pl\n",
     "\n",
-    "openai.api_key = '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'"
+    "openai.api_key = '...'"
    ]
   },
   {
