--- a/notebooks/gpt_fine_tune.ipynb
+++ b/notebooks/gpt_fine_tune.ipynb
@@ -123,7 +123,7 @@
     "path = '../datasets/stratified/tv.csv'\n",
     "\n",
     "save_fold_csv(path, folds=list(range(1, 10)), output_filename='train.csv')\n",
-    "save_fold_csv(path, folds=[10], output_filename='test.csv')"
+    "# save_fold_csv(path, folds=[10], output_filename='test.csv')"
    ]
   },
   {
